--- a/src/pages/Links/links.css
+++ b/src/pages/Links/links.css
@@ -71,6 +71,8 @@
 @media (max-width: 715px) {
     .links-container {
         width: 90%;
+
+
     }
 
     .link h1 {
@@ -86,7 +88,8 @@
     }
 
     .link svg {
-        display: none;
+        display: flex;
     }
+
 
 }
