--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,6 +1,7 @@
 .container-home {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    margin-top: 10rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,7 +97,6 @@
 .area-input button:hover {
     transform: scale(1.05);
 }
-
 
 /* Iniciando a responsividade */
 
